--- a/package.json
+++ b/package.json
@@ -1485,7 +1485,7 @@
 				},
 				{
 					"command": "openshift.service.create",
-					"when": "view == openshiftProjectExplorer && isLoggedIn && viewItem =~ /openshift.project.*/i",
+					"when": "view == openshiftProjectExplorer && isLoggedIn && viewItem =~ /openshift.project.*/i && showCreateService",
 					"group": "c2"
 				}
 			],
