Create Service has empty dropdown on Sandbox #3544 (#3704)
Fixes: #3544

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/package.json
+++ b/package.json
@@ -1484,7 +1484,7 @@
 				},
 				{
 					"command": "openshift.service.create",
-					"when": "view == openshiftProjectExplorer && isLoggedIn && viewItem =~ /openshift.project.*/i",
+					"when": "view == openshiftProjectExplorer && isLoggedIn && viewItem =~ /openshift.project.*/i && showCreateService",
 					"group": "c2"
 				}
 			],
