--- a/package.json
+++ b/package.json
@@ -1750,7 +1750,7 @@
 				},
 				{
 					"command": "openshift.resource.load",
-					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject"
+					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject || viewItem == openshift.k8sObject.route"
 				},
 				{
 					"command": "openshift.resource.unInstall",
@@ -1758,11 +1758,11 @@
 				},
 				{
 					"command": "openshift.resource.openInDeveloperConsole",
-					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject && isOpenshiftCluster || openshift.k8sObject.helm && isOpenshiftCluster"
+					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject || openshift.k8sObject.helm || viewItem == openshift.k8sObject.route && isOpenshiftCluster"
 				},
 				{
 					"command": "openshift.resource.openInBrowser",
-					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject && hasRoutes && isOpenshiftCluster"
+					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject.route && isOpenshiftCluster"
 				},
 				{
 					"command": "openshift.Serverless.buildAndRun",
