--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,7 @@ jobs:
           targets["win32-x64"]=win32
           targets["win32-arm64"]=win32
           targets["linux-x64"]=linux
+          targets["linux-arm64"]=linux-arm64
           targets["darwin-x64"]=darwin
           targets["darwin-arm64"]=darwin
           for target in ${!targets[@]}; do
