--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
 		"@segment/analytics-next": "^1.63.0",
 		"@svgr/plugin-jsx": "^8.1.0",
 		"@types/chai": "^4.3.11",
+		"@types/dockerode": "^3.3.23",
 		"@types/express": "^4.17.21",
 		"@types/fs-extra": "^11.0.4",
 		"@types/lodash": "^4.14.202",
@@ -135,6 +136,7 @@
 		"chai": "^4.4.1",
 		"chokidar": "^3.5.3",
 		"codecov": "^3.8.2",
+		"dockerode": "^4.0.2",
 		"dpdm": "^3.14.0",
 		"esbuild": "^0.19.12",
 		"esbuild-plugin-svgr": "^2.1.0",
