--- a/test/ui/Jenkinsfile
+++ b/test/ui/Jenkinsfile
@@ -7,7 +7,7 @@ node('rhel8') {
     }
 
     stage('Install requirements') {
-        def nodeHome = tool 'nodejs-lts'
+        def nodeHome = tool 'nodejs-18.15.0'
         env.PATH="${env.PATH}:${nodeHome}/bin"
         sh "npm install"
     }
