--- a/package.json
+++ b/package.json
@@ -785,6 +785,11 @@
 				"category": "OpenShift"
 			},
 			{
+				"command": "openshift.deployment.scale",
+				"title": "Scale",
+				"category": "OpenShift"
+			},
+			{
 				"command": "openshift.resource.load",
 				"title": "Load",
 				"category": "OpenShift"
@@ -1301,6 +1306,10 @@
 				},
 				{
 					"command": "openshift.deployment.shell",
+					"when": "false"
+				},
+				{
+					"command": "openshift.deployment.scale",
 					"when": "false"
 				},
 				{
@@ -1846,6 +1855,10 @@
 				},
 				{
 					"command": "openshift.deployment.shell",
+					"when": "view == openshiftProjectExplorer && viewItem =~ /^openshift\\.k8sObject\\.Deployment/"
+				},
+				{
+					"command": "openshift.deployment.scale",
 					"when": "view == openshiftProjectExplorer && viewItem =~ /^openshift\\.k8sObject\\.Deployment/"
 				},
 				{
