vs-kubernetes.outputFormat set as yaml
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -254,7 +254,8 @@
 		"configurationDefaults": {
 			"vs-kubernetes": {
 				"vs-kubernetes.disable-context-info-status-bar": true,
-				"vs-kubernetes.disable-namespace-info-status-bar": true
+				"vs-kubernetes.disable-namespace-info-status-bar": true,
+				"vs-kubernetes.outputFormat": "yaml"
 			}
 		},
 		"icons": {
