use node 20 in CI build

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [ '18.15.x' ]
+        node: [ 20 ]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
