--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"engines": {
 		"vscode": "^1.64.2",
 		"npm": ">=8.0.0 <10.0.0",
-		"node": ">=16.0.0 <19.0.0"
+		"node": ">=16.0.0 <v20.11.1"
 	},
 	"badges": [
 		{
