--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
 		"@types/react-copy-to-clipboard": "^5.0.7",
 		"@types/react-dom": "^17.0.25",
 		"@types/react-syntax-highlighter": "^15.5.11",
+		"@types/selenium-webdriver": "^4.1.22",
 		"@types/shelljs": "^0.8.15",
 		"@types/sinon": "^17.0.3",
 		"@types/sinon-chai": "^3.2.12",
