Make stdout maxBuffer length to be configurable
The default value is set to 4Gb.

Fixes: #3925

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/package.json
+++ b/package.json
@@ -2238,6 +2238,11 @@
 						"type": "number",
 						"default": 90000,
 						"description": "Controls stopping development mode timeout (in milliseconds)."
+					},
+					"openshiftToolkit.execMaxBufferLength": {
+						"type": "number",
+						"default": 4,
+						"description": "MiB of memory to allocate for stdout buffer when executing a binary"
 					}
 				}
 			},
