--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
 		"mocha": "^10.4.0",
 		"mocha-jenkins-reporter": "^0.4.7",
 		"npm-run-all": "^4.1.5",
+		"portfinder": "^1.0.32",
 		"prettier": "^3.2.5",
 		"pretty-bytes": "^6.1.1",
 		"proxyquire": "^2.1.3",
@@ -854,6 +855,10 @@
 				"title": "Open in Browser"
 			},
 			{
+				"command": "openshift.resource.portForward",
+				"title": "Port Forward"
+			},
+			{
 				"command": "openshift.openStatusBar",
 				"title": "OpenShift",
 				"category": "OpenShift"
@@ -1342,6 +1347,10 @@
 				},
 				{
 					"command": "openshift.resource.watchLogs",
+					"when": "false"
+				},
+				{
+					"command": "openshift.resource.portForward",
 					"when": "false"
 				},
 				{
@@ -1916,6 +1925,10 @@
 				},
 				{
 					"command": "openshift.resource.load",
+					"when": "view == openshiftProjectExplorer && viewItem =~ /^openshift\\.k8sObject\\.(?!helm)/"
+				},
+				{
+					"command": "openshift.resource.portForward",
 					"when": "view == openshiftProjectExplorer && viewItem =~ /^openshift\\.k8sObject\\.(?!helm)/"
 				},
 				{
