--- a/package.json
+++ b/package.json
@@ -180,7 +180,8 @@
 		"vscode-extension-tester": "^8.1",
 		"xterm-addon-fit": "^0.8.0",
 		"xterm-addon-web-links": "^0.9.0",
-		"xterm-addon-webgl": "^0.16.0"
+		"xterm-addon-webgl": "^0.16.0",
+		"clipboardy": "^2.3.0"
 	},
 	"activationEvents": [
 		"onView:openshiftProjectExplorer",
