--- a/package.json
+++ b/package.json
@@ -177,7 +177,6 @@
 		"survey-core": "^1.10.3",
 		"survey-react-ui": "^1.10.5",
 		"typescript": "^5.4.5",
-		"valid-path": "^2.1.0",
 		"vscode-extension-tester": "^8.1",
 		"xterm-addon-fit": "^0.8.0",
 		"xterm-addon-web-links": "^0.9.0",
@@ -1634,7 +1633,7 @@
 				},
 				{
 					"command": "openshift.route.create",
-					"when": "view == openshiftProjectExplorer && isLoggedIn && viewItem =~ /openshift.project.*/i && showCreateRoute",
+					"when": "view == openshiftProjectExplorer && isLoggedIn && viewItem =~ /openshift.project.*/i && isOpenshiftCluster && showCreateRoute",
 					"group": "c2"
 				},
 				{
