Fix check-odo GH actions property array item addressing issue
Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/workflows/check-odo.yml
+++ b/.github/workflows/check-odo.yml
@@ -31,7 +31,7 @@ jobs:
             old_url=`jq -r .odo.platform.${platform}.url src/tools.json`
             new_url=`echo ${old_url} | sed "s|${{ env.REPO_ODO_VERSION }}|${{ env.LATEST_TOOL_RELEASE }}|"`
             checksum=`curl -s ${new_url}.sha256`
-            jq --indent 4 ".odo.platform.${platform}.url = \"${new_url}\"" src/tools.json | jq --indent 4 ".odo.platform.${platform}.sha256sum = \"${checksum}\"" > src/tools.json.new
+            jq --indent 4 ".odo.platform.[\"${platform}\"].url = \"${new_url}\"" src/tools.json | jq --indent 4 ".odo.platform.[\"${platform}\"].sha256sum = \"${checksum}\"" > src/tools.json.new
             mv src/tools.json.new src/tools.json
           done
       - name: Create pull request
