--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -20,5 +20,5 @@
         "*/app/**/*.tsx",
         "common/*.tsx",
         "common/*.ts"
-    ],
+, "create-deployment/pages/builderImageListItem.tsx", "create-deployment/pages/builderConfig.tsx"    ],
 }
