--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,9 @@
         "src/webview/create-service/app",
         "src/webview/create-route/app",
         "src/webview/create-component/app",
+        "src/webview/create-deployment/app",
         "src/webview/create-component/pages",
+        "src/webview/create-deployment/pages",
         "src/webview/devfile-registry/app",
         "src/webview/welcome/app",
         "src/webview/git-import/app",
