Devfile Registry editor is to allow devfile version selection and use when creating a component #4189
Fixes: #4189
Issue: #3850

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -19,6 +19,10 @@
         "*/app/**/*.ts",
         "*/app/**/*.tsx",
         "common/*.tsx",
-        "common/*.ts"
-, "create-deployment/pages/builderImageListItem.tsx", "create-deployment/pages/builderConfig.tsx"    ],
+        "common/*.ts",
+        "create-deployment/pages/builderImageListItem.tsx",
+        "create-deployment/pages/builderConfig.tsx",
+        "common/*.ts",
+        "../devfile-registry/devfileInfo.ts"
+    ],
 }
