--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"dockerode": "^4.0.2",
 		"fs-extra": "^11.2.0",
 		"git-up": "^7.0.0",
+		"git-url-parse": "^14.1.0",
 		"got": "^11.8.6",
 		"hasha": "^5.2.2",
 		"js-yaml": "^4.1.0",
@@ -105,6 +106,7 @@
 		"@mui/lab": "^5.0.0-alpha.172",
 		"@mui/material": "^5.16.4",
 		"@mui/styles": "^5.16.4",
+		"@octokit/rest": "^16.30.1",
 		"@rjsf/core": "^5.19.3",
 		"@rjsf/mui": "^5.19.3",
 		"@rjsf/utils": "^5.19.3",
@@ -115,6 +117,7 @@
 		"@types/dockerode": "^3.3.30",
 		"@types/express": "^4.17.21",
 		"@types/fs-extra": "^11.0.4",
+		"@types/git-url-parse": "^9.0.3",
 		"@types/lodash": "^4.17.7",
 		"@types/mocha": "^10.0.7",
 		"@types/node": "^18.19.41",
@@ -156,6 +159,7 @@
 		"file-loader": "^6.2.0",
 		"glob": "^11.0.0",
 		"istanbul": "^0.4.5",
+		"js-base64": "^3.7.7",
 		"leasot": "^14.4.0",
 		"mocha": "^10.7.0",
 		"mocha-jenkins-reporter": "^0.4.7",
