--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,7 @@ updates:
     rjsf:
       patterns:
       - "@rjsf/*"
+    survey:
+      patterns:
+      - "survey-core"
+      - "survey-react-ui"
