fixed no-unused-vars error
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -127,7 +127,7 @@
         "@typescript-eslint/unbound-method" : "off",
         "max-nested-callbacks" : "off",
         "@typescript-eslint/no-unsafe-assignment": 1,
-        "no-unused-vars": "off"
+        "@typescript-eslint/no-unused-vars": "off"
       }
     },
     {
