--- a/package.json
+++ b/package.json
@@ -71,9 +71,13 @@
 		"public-ui-test": "extest setup-and-run out/test/ui/public-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -e ./test-resources/extensions -c max -i"
 	},
 	"dependencies": {
+		"@codemirror/lang-yaml": "^6.1.1",
 		"@kubernetes/client-node": "^0.21.0",
 		"@redhat-developer/vscode-redhat-telemetry": "^0.8.0",
+		"@uiw/codemirror-theme-github": "^4.23.0",
+		"@uiw/react-codemirror": "^4.23.0",
 		"clsx": "^2.1.1",
+		"codemirror": "^6.0.1",
 		"dockerode": "^4.0.2",
 		"fs-extra": "^11.2.0",
 		"git-up": "^7.0.0",
