--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
 		"@mui/lab": "^6.0.0-beta.10",
 		"@mui/material": "^6.1.0",
 		"@mui/styles": "^6.1.1",
+		"@mui/x-tree-view": "^7.18.0",
 		"@rjsf/core": "^5.21.1",
 		"@rjsf/mui": "^5.21.1",
 		"@rjsf/utils": "^5.21.1",
